// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings FLAGS returns the correct flags 1`] = `
Object {
  "BATTLESQUID": "Battlesquid",
  "BIG_OCTO": "Big Octo",
  "COMBAT_SECRET_CAVE": "Combat Secret Cave",
  "DUNGEON": "Dungeon",
  "EXPENSIVE_PURCHASE": "Expensive Purchase",
  "EYE_REEF_CHEST": "Eye Reef Chest",
  "FREE_GIFT": "Free Gift",
  "GREAT_FAIRY": "Great Fairy",
  "GUNBOAT": "Gunboat",
  "ISLAND_PUZZLE": "Island Puzzle",
  "LONG_SIDEQUEST": "Long Sidequest",
  "MAIL": "Mail",
  "MINIGAME": "Minigame",
  "MISC": "Misc",
  "OTHER_CHEST": "Other Chest",
  "PLATFORM": "Platform",
  "PUZZLE_SECRET_CAVE": "Puzzle Secret Cave",
  "RAFT": "Raft",
  "SAVAGE_LABYRINTH": "Savage Labyrinth",
  "SHORT_SIDEQUEST": "Short Sidequest",
  "SPOILS_TRADING": "Spoils Trading",
  "SUBMARINE": "Submarine",
  "SUNKEN_TREASURE": "Sunken Treasure",
  "SUNKEN_TRIFORCE": "Sunken Triforce",
  "TINGLE_CHEST": "Tingle Chest",
}
`;

exports[`Settings initializeFromPermalink all starting gear set initializes the starting gear 1`] = `
Object {
  "Bait Bag": 1,
  "Bombs": 1,
  "Boomerang": 1,
  "Cabana Deed": 1,
  "Command Melody": 1,
  "Deku Leaf": 1,
  "Delivery Bag": 1,
  "Din's Pearl": 1,
  "Earth God's Lyric": 1,
  "Empty Bottle": 1,
  "Farore's Pearl": 1,
  "Ghost Ship Chart": 1,
  "Grappling Hook": 1,
  "Hero's Charm": 1,
  "Hookshot": 1,
  "Hurricane Spin": 1,
  "Iron Boots": 1,
  "Maggie's Letter": 1,
  "Magic Armor": 1,
  "Magic Meter Upgrade": 1,
  "Moblin's Letter": 1,
  "Nayru's Pearl": 1,
  "Note to Mom": 1,
  "Power Bracelets": 1,
  "Progressive Bomb Bag": 2,
  "Progressive Bow": 3,
  "Progressive Picto Box": 2,
  "Progressive Quiver": 2,
  "Progressive Shield": 2,
  "Progressive Sword": 3,
  "Progressive Wallet": 2,
  "Skull Hammer": 1,
  "Spoils Bag": 1,
  "Telescope": 1,
  "Tingle Tuner": 1,
  "Wind God's Aria": 1,
}
`;

exports[`Settings initializeFromPermalink default settings initializes the options 1`] = `
Object {
  "add_shortcut_warps_between_dungeons": false,
  "disable_tingle_chests_with_tingle_bombs": false,
  "do_not_generate_spoiler_log": false,
  "instant_text_boxes": true,
  "keylunacy": false,
  "num_race_mode_dungeons": 4,
  "num_starting_triforce_shards": 0,
  "progression_battlesquid": false,
  "progression_big_octos_gunboats": false,
  "progression_combat_secret_caves": false,
  "progression_dungeons": true,
  "progression_expensive_purchases": true,
  "progression_eye_reef_chests": false,
  "progression_free_gifts": true,
  "progression_great_fairies": true,
  "progression_island_puzzles": false,
  "progression_long_sidequests": false,
  "progression_mail": false,
  "progression_minigames": false,
  "progression_misc": true,
  "progression_platforms_rafts": false,
  "progression_puzzle_secret_caves": true,
  "progression_savage_labyrinth": false,
  "progression_short_sidequests": false,
  "progression_spoils_trading": false,
  "progression_submarines": false,
  "progression_tingle_chests": false,
  "progression_treasure_charts": false,
  "progression_triforce_charts": false,
  "race_mode": false,
  "randomize_charts": false,
  "randomize_enemies": false,
  "randomize_enemy_palettes": false,
  "randomize_entrances": "Disabled",
  "randomize_music": false,
  "randomize_starting_island": false,
  "remove_music": false,
  "reveal_full_sea_chart": true,
  "seed_name": "yeet",
  "skip_rematch_bosses": true,
  "starting_gear": Object {
    "Bait Bag": 0,
    "Bombs": 0,
    "Boomerang": 0,
    "Cabana Deed": 0,
    "Command Melody": 0,
    "Deku Leaf": 0,
    "Delivery Bag": 0,
    "Din's Pearl": 0,
    "Earth God's Lyric": 0,
    "Empty Bottle": 0,
    "Farore's Pearl": 0,
    "Ghost Ship Chart": 0,
    "Grappling Hook": 0,
    "Hero's Charm": 0,
    "Hookshot": 0,
    "Hurricane Spin": 0,
    "Iron Boots": 0,
    "Maggie's Letter": 0,
    "Magic Armor": 0,
    "Magic Meter Upgrade": 0,
    "Moblin's Letter": 0,
    "Nayru's Pearl": 0,
    "Note to Mom": 0,
    "Power Bracelets": 0,
    "Progressive Bomb Bag": 0,
    "Progressive Bow": 0,
    "Progressive Picto Box": 0,
    "Progressive Quiver": 0,
    "Progressive Shield": 1,
    "Progressive Sword": 0,
    "Progressive Wallet": 0,
    "Skull Hammer": 0,
    "Spoils Bag": 0,
    "Telescope": 0,
    "Tingle Tuner": 0,
    "Wind God's Aria": 0,
  },
  "starting_hcs": 0,
  "starting_pohs": 0,
  "swift_sail": true,
  "sword_mode": "Start with Hero's Sword",
  "version": "1.9.0",
}
`;

exports[`Settings initializeFromPermalink default settings initializes the starting gear 1`] = `
Object {
  "Bait Bag": 0,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Shield": 1,
  "Progressive Sword": 0,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Tuner": 0,
  "Wind God's Aria": 0,
}
`;
